# ParaStencil-Eigen

./: CMakeLists.txt  README.md  data.in  data.py  softmax.cpp  softmax.py
